--- a/index.html
+++ b/index.html
@@ -3,35 +3,36 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Constelaciones — Proyecto A fondo</title>
-  <meta name="description" content="Colección de constelaciones interactivas a partir de entrevistas del programa A fondo (RTVE).">
+  <title>Constelaciones — Galería de entrevistas</title>
+  <meta name="description" content="Galería de rostros; cada imagen abre la constelación correspondiente.">
   <style>
-    :root{--bg:#fff;--fg:#111827;--muted:#6b7280;--card:#f9fafb;--border:#e5e7eb;--link:#2563eb}
-    html,body{margin:0;padding:0;background:var(--bg);color:var(--fg);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
+    :root{--bg:#fff;--fg:#111827;--muted:#6b7280;--border:#e5e7eb;--accent:#2563eb}
+    html,body{margin:0;background:var(--bg);color:var(--fg);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
     header{padding:24px 16px;border-bottom:1px solid var(--border)}
     header .wrap, main .wrap{max-width:1100px;margin:0 auto}
     h1{margin:0;font-size:28px}
-    p{color:var(--muted)}
-    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(260px,1fr));gap:16px;margin:20px 0 40px}
-    .card{background:var(--card);border:1px solid var(--border);border-radius:14px;padding:14px;display:flex;flex-direction:column;gap:8px}
-    .card a{color:var(--link);text-decoration:none}
-    .card a:hover{text-decoration:underline}
-    .thumb{width:100%;height:140px;background:#e5e7eb;border-radius:10px;display:flex;align-items:center;justify-content:center;color:#6b7280;font-size:12px}
-    .chips{display:flex;flex-wrap:wrap;gap:6px;margin-top:4px}
-    .chip{background:#eef2ff;border:1px solid #c7d2fe;color:#3730a3;border-radius:999px;padding:2px 8px;font-size:12px}
-    .toolbar{display:flex;gap:8px;align-items:center;margin-top:10px}
-    input[type="search"],select{border:1px solid var(--border);border-radius:8px;padding:8px 10px;font-size:14px}
+    p{color:var(--muted);margin:6px 0 0}
+    .toolbar{display:flex;gap:8px;align-items:center;margin-top:12px}
+    input[type="search"]{border:1px solid var(--border);border-radius:10px;padding:10px 12px;font-size:14px;width:320px;max-width:100%}
+    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(180px,1fr));gap:18px;padding:18px 0 40px}
+    .card{display:flex;flex-direction:column;align-items:center;gap:10px;text-align:center}
+    .face{width:160px;height:160px;border-radius:50%;border:2px solid var(--border);overflow:hidden;background:#f3f4f6;display:flex;align-items:center;justify-content:center}
+    .face img{width:100%;height:100%;object-fit:cover;display:block}
+    .name{font-weight:600}
+    .tags{display:flex;flex-wrap:wrap;gap:6px;justify-content:center}
+    .tag{background:#eef2ff;border:1px solid #c7d2fe;color:#3730a3;border-radius:999px;padding:2px 8px;font-size:12px}
+    a.cardlink{color:inherit;text-decoration:none}
+    a.cardlink:hover .name{color:var(--accent);text-decoration:underline}
     footer{border-top:1px solid var(--border);padding:18px 16px;color:var(--muted)}
   </style>
 </head>
 <body>
   <header>
     <div class="wrap">
-      <h1>Constelaciones — Proyecto A fondo</h1>
-      <p>Visualizaciones interactivas de referencias culturales, biográficas y contextuales a partir de entrevistas a escritores hispanoamericanos.</p>
+      <h1>Galería de entrevistas</h1>
+      <p>Pulsa en el rostro para abrir la constelación.</p>
       <div class="toolbar">
-        <input id="q" type="search" placeholder="Buscar por título o etiqueta…">
-        <select id="tagSel"><option value="">Filtrar por etiqueta</option></select>
+        <input id="q" type="search" placeholder="Buscar por nombre o etiqueta…">
       </div>
     </div>
   </header>
@@ -41,91 +42,70 @@
     </div>
   </main>
   <footer>
-    <div class="wrap">Proyecto Constelaciones literarias A fondo · hcommons + GitHub Pages</div>
+    <div class="wrap">A fondo — constelaciones interactivas</div>
   </footer>
 
   <script>
-    const state = { items: [], tags: [] };
+    const state = { items: [] };
 
     function render(list){
       const grid = document.getElementById("grid");
       grid.innerHTML = "";
       if (!list.length){
-        grid.innerHTML = "<p>No hay resultados con los filtros actuales.</p>";
+        grid.innerHTML = "<p>No hay resultados.</p>";
         return;
       }
-      list.forEach(item => {
-        const card = document.createElement("div");
-        card.className = "card";
+      list.forEach(it => {
         const a = document.createElement("a");
-        a.href = item.file;
+        a.href = it.file;
         a.target = "_blank";
         a.rel = "noopener";
-        a.textContent = item.title || item.file;
-        const thumb = document.createElement("div");
-        thumb.className = "thumb";
-        if (item.thumb){
-          thumb.style.backgroundImage = `url('${item.thumb}')`;
-          thumb.style.backgroundSize = "cover";
-          thumb.style.backgroundPosition = "center";
-          thumb.textContent = "";
-        } else {
-          thumb.textContent = "Sin miniatura";
-        }
-        const meta = document.createElement("div");
-        meta.style.color = "#6b7280";
-        meta.style.fontSize = "13px";
-        meta.textContent = item.date ? `Fecha: ${item.date}` : "";
-        const chips = document.createElement("div");
-        chips.className = "chips";
-        (item.tags||[]).forEach(t => {
-          const chip = document.createElement("span");
-          chip.className = "chip";
-          chip.textContent = t;
-          chip.addEventListener("click", () => {
-            document.getElementById("tagSel").value = t;
-            applyFilters();
-          });
-          chips.appendChild(chip);
+        a.className = "cardlink";
+        const card = document.createElement("div");
+        card.className = "card";
+
+        const face = document.createElement("div");
+        face.className = "face";
+        const img = document.createElement("img");
+        img.loading = "lazy";
+        img.alt = it.title || it.id;
+        img.src = it.thumb || "img/carpentier_placeholder.svg"; // placeholder if missing
+        face.appendChild(img);
+
+        const name = document.createElement("div");
+        name.className = "name";
+        name.textContent = (it.title || it.id || "").replace(/ — Constelación.*/,"");
+
+        const tags = document.createElement("div");
+        tags.className = "tags";
+        (it.tags||[]).forEach(t => {
+          const span = document.createElement("span");
+          span.className = "tag";
+          span.textContent = t;
+          tags.appendChild(span);
         });
-        card.appendChild(thumb);
-        card.appendChild(a);
-        if (item.date) card.appendChild(meta);
-        if ((item.tags||[]).length) card.appendChild(chips);
-        grid.appendChild(card);
+
+        card.appendChild(face);
+        card.appendChild(name);
+        if ((it.tags||[]).length) card.appendChild(tags);
+        a.appendChild(card);
+        grid.appendChild(a);
       });
     }
 
-    function applyFilters(){
+    function applySearch(){
       const q = document.getElementById("q").value.trim().toLowerCase();
-      const tag = document.getElementById("tagSel").value;
       const filtered = state.items.filter(it => {
-        let ok = true;
-        if (q){
-          const hay = (it.title||"") + " " + (it.tags||[]).join(" ");
-          ok = hay.toLowerCase().includes(q);
-        }
-        if (ok && tag){
-          ok = (it.tags||[]).includes(tag);
-        }
-        return ok;
+        const hay = (it.title||"") + " " + (it.tags||[]).join(" ");
+        return hay.toLowerCase().includes(q);
       });
       render(filtered);
     }
 
     fetch("manifest.json").then(r => r.json()).then(items => {
       state.items = items;
-      // collect tags
-      const tagSet = new Set();
-      items.forEach(it => (it.tags||[]).forEach(t => tagSet.add(t)));
-      const tagSel = document.getElementById("tagSel");
-      [...tagSet].sort().forEach(t => {
-        const opt = document.createElement("option");
-        opt.value = t; opt.textContent = t; tagSel.appendChild(opt);
-      });
       render(items);
-      document.getElementById("q").addEventListener("input", applyFilters);
-      tagSel.addEventListener("change", applyFilters);
+      document.getElementById("q").addEventListener("input", applySearch);
     }).catch(err => {
       document.getElementById("grid").innerHTML = "<p>Error cargando manifest.json.</p>";
       console.error(err);
