--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
       render(filtered);
     }
 
-    fetch("manifest.json").then(r => r.json()).then(items => {
+      // Opción A
+      fetch("manifest.json", { cache: "no-store" }).then(r => r.json()).then(items => {
       state.items = items;
       render(items);
       document.getElementById("q").addEventListener("input", applySearch);
