--- a/carpentier/carpentier_constelacion.html
+++ b/carpentier/carpentier_constelacion.html
@@ -31,111 +31,114 @@
     <div><span class="badge" style="border-color:#000;">◯</span> Categoría</div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
-  <script>
-    const width = window.innerWidth - 340, height = window.innerHeight;
+<script>
+  const width = window.innerWidth - 340, height = window.innerHeight;
 
-    const color = d3.scaleOrdinal()
-      .domain(["category","reference"])
-      .range(["#000000", "#1f77b4"]);
+  const color = d3.scaleOrdinal().domain(["category","reference"]).range(["#000000", "#1f77b4"]);
 
-    Promise.all([
-      d3.csv("carpentier_nodos.csv"),
-      d3.csv("carpentier_aristas.csv")
-    ]).then(([nodes, links]) => {
-      const nodeById = new Map(nodes.map(d => [d.id, d]));
-      const edges = links.map(d => Object.assign({}, d, {
-        source: nodeById.get(d.source),
-        target: nodeById.get(d.target)
-      }));
+  // Carga robusta (sin cache y detectando separador)
+  async function loadCsvSmart(url) {
+    const txt = await fetch(url, { cache: "no-store" }).then(r => {
+      if (!r.ok) throw new Error(`HTTP ${r.status} al cargar ${url}`);
+      return r.text();
+    });
+    const header = txt.split(/\r?\n/,1)[0] || "";
+    const sep = (header.split(";").length > header.split(",").length) ? ";" : ",";
+    const parse = d3.dsvFormat(sep).parse;
+    return parse(txt);
+  }
 
-      const svg = d3.select("#viz").append("svg")
-        .attr("width", width)
-        .attr("height", height);
+  function show(msg) {
+    document.getElementById("content").textContent = msg;
+  }
+
+  (async () => {
+    try {
+      const [nodes, links] = await Promise.all([
+        loadCsvSmart("carpentier_nodos.csv"),
+        loadCsvSmart("carpentier_aristas.csv")
+      ]);
+
+      // Comprobaciones básicas
+      if (!nodes.length || !links.length) {
+        show(`Datos vacíos. nodos=${nodes.length}, aristas=${links.length}. ¿Rutas/nombres correctos? ¿Separador correcto?`);
+        return;
+      }
+      const needNodeCols = ["id","label","type"];
+      const needEdgeCols = ["source","target"];
+      const missingNodeCols = needNodeCols.filter(c => !(c in nodes[0]));
+      const missingEdgeCols = needEdgeCols.filter(c => !(c in links[0]));
+      if (missingNodeCols.length || missingEdgeCols.length) {
+        show(`Faltan columnas: nodos[${missingNodeCols.join(", ")}], aristas[${missingEdgeCols.join(", ")}].`);
+        return;
+      }
+
+      // Mantener source/target como IDs de texto (¡clave para no romper si algo falta!)
+      const edges = links.map(d => ({ source: d.source, target: d.target }));
+
+      const svg = d3.select("#viz").append("svg").attr("width", width).attr("height", height);
 
       const simulation = d3.forceSimulation(nodes)
-        .force("link", d3.forceLink(edges).id(d => d.id).distance(l => l.source.type==="reference" ? 70 : 40).strength(0.1))
+        .force("link", d3.forceLink(edges).id(d => d.id).distance(l => {
+          const s = nodes.find(n => n.id === l.source);
+          return (s && s.type === "reference") ? 70 : 40;
+        }).strength(0.1))
         .force("charge", d3.forceManyBody().strength(-200))
         .force("center", d3.forceCenter(width / 2, height / 2))
-        .force("collision", d3.forceCollide().radius(d => d.type==="category" ? 34 : 16));
+        .force("collision", d3.forceCollide().radius(d => d.type === "category" ? 34 : 16));
 
       const link = svg.append("g")
-        .attr("stroke", "#bbb")
-        .attr("stroke-opacity", 0.6)
-        .selectAll("line")
-        .data(edges)
-        .join("line")
-        .attr("class", "link");
+        .attr("stroke", "#bbb").attr("stroke-opacity", 0.6)
+        .selectAll("line").data(edges).join("line").attr("class", "link");
 
       const node = svg.append("g")
-        .attr("stroke", "#fff")
-        .attr("stroke-width", 1.5)
-        .selectAll("circle")
-        .data(nodes)
-        .join("circle")
+        .attr("stroke", "#fff").attr("stroke-width", 1.5)
+        .selectAll("circle").data(nodes).join("circle")
         .attr("class", d => "node " + d.type)
-        .attr("r", d => d.type==="category" ? 18 : 8)
+        .attr("r", d => d.type === "category" ? 18 : 8)
         .attr("fill", d => color(d.type))
-        .call(drag(simulation))
+        .call(d3.drag()
+          .on("start", (event,d) => { if (!event.active) simulation.alphaTarget(0.3).restart(); d.fx = d.x; d.fy = d.y; })
+          .on("drag",  (event,d) => { d.fx = event.x; d.fy = event.y; })
+          .on("end",   (event,d) => { if (!event.active) simulation.alphaTarget(0); d.fx = null; d.fy = null; })
+        )
         .on("click", (event, d) => showPanel(d));
 
       const label = svg.append("g")
-        .attr("font-family", "sans-serif")
-        .attr("font-size", 11)
-        .attr("fill", "#333")
-        .selectAll("text")
-        .data(nodes)
-        .join("text")
-        .text(d => d.label)
-        .attr("dy", d => d.type==="category" ? -22 : -12)
-        .attr("text-anchor", "middle");
+        .attr("font-family", "sans-serif").attr("font-size", 11).attr("fill", "#333")
+        .selectAll("text").data(nodes).join("text")
+        .text(d => d.label).attr("dy", d => d.type === "category" ? -22 : -12).attr("text-anchor", "middle");
 
       simulation.on("tick", () => {
         link
-          .attr("x1", d => d.source.x)
-          .attr("y1", d => d.source.y)
-          .attr("x2", d => d.target.x)
-          .attr("y2", d => d.target.y);
+          .attr("x1", d => (nodes.find(n => n.id === d.source) || {}).x || 0)
+          .attr("y1", d => (nodes.find(n => n.id === d.source) || {}).y || 0)
+          .attr("x2", d => (nodes.find(n => n.id === d.target) || {}).x || 0)
+          .attr("y2", d => (nodes.find(n => n.id === d.target) || {}).y || 0);
 
-        node
-          .attr("cx", d => d.x)
-          .attr("cy", d => d.y);
-
-        label
-          .attr("x", d => d.x)
-          .attr("y", d => d.y);
+        node.attr("cx", d => d.x).attr("cy", d => d.y);
+        label.attr("x", d => d.x).attr("y", d => d.y);
       });
-
-      function drag(simulation) {
-        function dragstarted(event, d) {
-          if (!event.active) simulation.alphaTarget(0.3).restart();
-          d.fx = d.x; d.fy = d.y;
-        }
-        function dragged(event, d) {
-          d.fx = event.x; d.fy = event.y;
-        }
-        function dragended(event, d) {
-          if (!event.active) simulation.alphaTarget(0);
-          d.fx = null; d.fy = null;
-        }
-        return d3.drag().on("start", dragstarted).on("drag", dragged).on("end", dragended);
-      }
 
       function showPanel(d) {
         const panel = document.getElementById("content");
         if (d.type === "reference") {
-          const title = d.label || "Referencia";
           const ctx = (d.note && d.note.trim()) ? d.note : "Sin contexto breve disponible.";
-          panel.innerHTML = `<strong>${escapeHtml(title)}</strong>\n\n${escapeHtml(ctx)}`;
+          panel.innerHTML = `<strong>${escapeHtml(d.label || "Referencia")}</strong>\n\n${escapeHtml(ctx)}`;
         } else {
-          panel.innerHTML = `<strong>${escapeHtml(d.label || "Categoría")}</strong>\n\n` +
-            `Esta categoría agrupa referencias relacionadas.`;
+          panel.innerHTML = `<strong>${escapeHtml(d.label || "Categoría")}</strong>\n\nEsta categoría agrupa referencias relacionadas.`;
         }
       }
+      function escapeHtml(s) { return (s || "").replaceAll("&","&amp;").replaceAll("<","&lt;").replaceAll(">","&gt;"); }
 
-      function escapeHtml(unsafe) {
-        return unsafe.replaceAll("&","&amp;").replaceAll("<","&lt;").replaceAll(">","&gt;");
-      }
-    });
-  </script>
+      // Feedback de éxito (útil para saber que sí carga algo)
+      document.getElementById("content").textContent =
+        `Datos cargados: nodos=${nodes.length}, aristas=${links.length}. Haz clic en una referencia para ver el contexto.`;
+
+    } catch (err) {
+      document.getElementById("content").textContent = "Error cargando datos: " + err.message;
+    }
+  })();
+</script>
 </body>
 </html>
