--- a/carpentier/carpentier_constelacion.html
+++ b/carpentier/carpentier_constelacion.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Constelación — Alejo Carpentier (plana)</title>
+  <title>Constelación — Alejo Carpentier</title>
   <style>
     body { font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin: 0; display:flex; height:100vh;}
     #viz { flex: 1 1 auto; background: #fafafa;}
@@ -17,6 +17,7 @@
     .node.reference { stroke-width: 1; }
     .link { stroke:#bbb; stroke-opacity: .6; }
     .legend { position: absolute; left: 10px; top: 10px; background: rgba(255,255,255,.9); border:1px solid #e5e5e5; padding:8px; border-radius:6px; font-size:12px;}
+    .search-box { position: absolute; right: 360px; top: 10px; background: white; border: 1px solid #ccc; border-radius: 6px; padding: 4px;}
   </style>
 </head>
 <body>
@@ -26,17 +27,40 @@
     <div class="meta">Haz clic en una <strong>referencia</strong> para ver el contexto breve.</div>
     <div id="content" class="ctx">—</div>
   </aside>
+
+  <!-- CAMBIO: leyenda con colores reales -->
   <div class="legend">
-    <div><span class="badge">●</span> Referencia</div>
-    <div><span class="badge" style="border-color:#000;">◯</span> Categoría</div>
+    <div><span style="display:inline-block;width:12px;height:12px;border-radius:50%;background:#1f77b4;margin-right:4px;"></span> Referencia</div>
+    <div><span style="display:inline-block;width:12px;height:12px;border-radius:50%;background:red;margin-right:4px;"></span> Biográficas</div>
+    <div><span style="display:inline-block;width:12px;height:12px;border-radius:50%;background:green;margin-right:4px;"></span> Producción literaria</div>
+    <div><span style="display:inline-block;width:12px;height:12px;border-radius:50%;background:orange;margin-right:4px;"></span> Influencias y referencias culturales</div>
+    <div><span style="display:inline-block;width:12px;height:12px;border-radius:50%;background:purple;margin-right:4px;"></span> Contexto histórico y social</div>
   </div>
+
+  <!-- CAMBIO: caja de búsqueda -->
+  <div class="search-box">
+    <input type="text" id="search" placeholder="Buscar referencia..." />
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
 <script>
   const width = window.innerWidth - 340, height = window.innerHeight;
 
-  const color = d3.scaleOrdinal().domain(["category","reference"]).range(["#000000", "#1f77b4"]);
+  // CAMBIO: color específico por categoría
+  const categoryColors = {
+    "Referencias biográficas": "red",
+    "Producción literaria": "green",
+    "Influencias y referencias culturales": "orange",
+    "Contexto histórico y social": "purple"
+  };
 
-  // Carga robusta (sin cache y detectando separador)
+  function getColor(d) {
+    if (d.type === "reference") return "#1f77b4";
+    if (d.type === "category") return categoryColors[d.label] || "#000";
+    if (d.type === "author") return "#000"; // nodo central
+    return "#999";
+  }
+
   async function loadCsvSmart(url) {
     const txt = await fetch(url, { cache: "no-store" }).then(r => {
       if (!r.ok) throw new Error(`HTTP ${r.status} al cargar ${url}`);
@@ -54,49 +78,38 @@
 
   (async () => {
     try {
-      const [nodes, links] = await Promise.all([
+      let [nodes, links] = await Promise.all([
         loadCsvSmart("carpentier_nodos.csv"),
         loadCsvSmart("carpentier_aristas.csv")
       ]);
 
-      // Comprobaciones básicas
-      if (!nodes.length || !links.length) {
-        show(`Datos vacíos. nodos=${nodes.length}, aristas=${links.length}. ¿Rutas/nombres correctos? ¿Separador correcto?`);
-        return;
-      }
-      const needNodeCols = ["id","label","type"];
-      const needEdgeCols = ["source","target"];
-      const missingNodeCols = needNodeCols.filter(c => !(c in nodes[0]));
-      const missingEdgeCols = needEdgeCols.filter(c => !(c in links[0]));
-      if (missingNodeCols.length || missingEdgeCols.length) {
-        show(`Faltan columnas: nodos[${missingNodeCols.join(", ")}], aristas[${missingEdgeCols.join(", ")}].`);
-        return;
-      }
+      // CAMBIO: nodo central autor
+      const authorNode = { id: "autor", label: "Alejo Carpentier", type: "author" };
+      nodes.push(authorNode);
+      const categoryIds = nodes.filter(n => n.type === "category").map(n => n.id);
+      categoryIds.forEach(cid => {
+        links.push({ source: "autor", target: cid });
+      });
 
-      // Mantener source/target como IDs de texto (¡clave para no romper si algo falta!)
-      const edges = links.map(d => ({ source: d.source, target: d.target }));
+      const svg = d3.select("#viz").append("svg")
+        .attr("width", width).attr("height", height)
+        .call(d3.zoom().on("zoom", (event) => { g.attr("transform", event.transform); })) // CAMBIO: zoom/pan
+        .append("g");
 
-      const svg = d3.select("#viz").append("svg").attr("width", width).attr("height", height);
+      const g = svg.append("g");
 
-      const simulation = d3.forceSimulation(nodes)
-        .force("link", d3.forceLink(edges).id(d => d.id).distance(l => {
-          const s = nodes.find(n => n.id === l.source);
-          return (s && s.type === "reference") ? 70 : 40;
-        }).strength(0.1))
-        .force("charge", d3.forceManyBody().strength(-200))
-        .force("center", d3.forceCenter(width / 2, height / 2))
-        .force("collision", d3.forceCollide().radius(d => d.type === "category" ? 34 : 16));
-
-      const link = svg.append("g")
+      const link = g.append("g")
         .attr("stroke", "#bbb").attr("stroke-opacity", 0.6)
-        .selectAll("line").data(edges).join("line").attr("class", "link");
+        .selectAll("line").data(links).join("line")
+        .attr("class", "link")
+        .attr("marker-end", "url(#arrow)");
 
-      const node = svg.append("g")
+      const node = g.append("g")
         .attr("stroke", "#fff").attr("stroke-width", 1.5)
         .selectAll("circle").data(nodes).join("circle")
         .attr("class", d => "node " + d.type)
-        .attr("r", d => d.type === "category" ? 18 : 8)
-        .attr("fill", d => color(d.type))
+        .attr("r", d => d.type === "category" ? 18 : (d.type==="author" ? 24 : 8))
+        .attr("fill", d => getColor(d))
         .call(d3.drag()
           .on("start", (event,d) => { if (!event.active) simulation.alphaTarget(0.3).restart(); d.fx = d.x; d.fy = d.y; })
           .on("drag",  (event,d) => { d.fx = event.x; d.fy = event.y; })
@@ -104,17 +117,33 @@
         )
         .on("click", (event, d) => showPanel(d));
 
-      const label = svg.append("g")
+      const label = g.append("g")
         .attr("font-family", "sans-serif").attr("font-size", 11).attr("fill", "#333")
         .selectAll("text").data(nodes).join("text")
-        .text(d => d.label).attr("dy", d => d.type === "category" ? -22 : -12).attr("text-anchor", "middle");
+        .text(d => d.label).attr("dy", d => d.type==="category" ? -22 : -12).attr("text-anchor", "middle");
+
+      // CAMBIO: flechas en las conexiones
+      svg.append("defs").selectAll("marker")
+        .data(["arrow"]).join("marker")
+        .attr("id", "arrow")
+        .attr("viewBox", "0 -5 10 10")
+        .attr("refX", 12).attr("refY", 0)
+        .attr("markerWidth", 6).attr("markerHeight", 6)
+        .attr("orient", "auto")
+        .append("path").attr("d", "M0,-5L10,0L0,5").attr("fill", "#bbb");
+
+      const simulation = d3.forceSimulation(nodes)
+        .force("link", d3.forceLink(links).id(d => d.id).distance(80).strength(0.3))
+        .force("charge", d3.forceManyBody().strength(-250))
+        .force("center", d3.forceCenter(width / 2, height / 2))
+        .force("collision", d3.forceCollide().radius(d => d.type==="category" ? 34 : (d.type==="author" ? 40 : 16)));
 
       simulation.on("tick", () => {
         link
-          .attr("x1", d => (nodes.find(n => n.id === d.source) || {}).x || 0)
-          .attr("y1", d => (nodes.find(n => n.id === d.source) || {}).y || 0)
-          .attr("x2", d => (nodes.find(n => n.id === d.target) || {}).x || 0)
-          .attr("y2", d => (nodes.find(n => n.id === d.target) || {}).y || 0);
+          .attr("x1", d => (nodes.find(n => n.id === d.source) || d.source).x || 0)
+          .attr("y1", d => (nodes.find(n => n.id === d.source) || d.source).y || 0)
+          .attr("x2", d => (nodes.find(n => n.id === d.target) || d.target).x || 0)
+          .attr("y2", d => (nodes.find(n => n.id === d.target) || d.target).y || 0);
 
         node.attr("cx", d => d.x).attr("cy", d => d.y);
         label.attr("x", d => d.x).attr("y", d => d.y);
@@ -126,14 +155,20 @@
           const ctx = (d.note && d.note.trim()) ? d.note : "Sin contexto breve disponible.";
           panel.innerHTML = `<strong>${escapeHtml(d.label || "Referencia")}</strong>\n\n${escapeHtml(ctx)}`;
         } else {
-          panel.innerHTML = `<strong>${escapeHtml(d.label || "Categoría")}</strong>\n\nEsta categoría agrupa referencias relacionadas.`;
+          panel.innerHTML = `<strong>${escapeHtml(d.label || "Categoría")}</strong>`;
         }
       }
       function escapeHtml(s) { return (s || "").replaceAll("&","&amp;").replaceAll("<","&lt;").replaceAll(">","&gt;"); }
 
-      // Feedback de éxito (útil para saber que sí carga algo)
-      document.getElementById("content").textContent =
-        `Datos cargados: nodos=${nodes.length}, aristas=${links.length}. Haz clic en una referencia para ver el contexto.`;
+      // CAMBIO: quitamos el mensaje de “datos cargados”
+      document.getElementById("content").textContent = "—";
+
+      // CAMBIO: buscador
+      document.getElementById("search").addEventListener("input", e => {
+        const term = e.target.value.toLowerCase();
+        node.attr("stroke", d => (d.type==="reference" && d.label.toLowerCase().includes(term)) ? "yellow" : "#fff")
+            .attr("stroke-width", d => (d.type==="reference" && d.label.toLowerCase().includes(term)) ? 3 : 1.5);
+      });
 
     } catch (err) {
       document.getElementById("content").textContent = "Error cargando datos: " + err.message;
