--- a/carpentier/carpentier_constelacion.html
+++ b/carpentier/carpentier_constelacion.html
@@ -11,10 +11,7 @@
     #panel h2 { font-size: 18px; margin: 0 0 6px; }
     #panel .meta { color:#666; font-size: 12px; margin-bottom:8px;}
     #panel .ctx { white-space: pre-wrap; line-height:1.35; }
-    .badge { display:inline-block; padding:2px 6px; border-radius: 999px; font-size:11px; border:1px solid #ddd; margin-right:6px;}
     .node { cursor: pointer; }
-    .node.category { stroke-width: 2; }
-    .node.reference { stroke-width: 1; }
     .link { stroke:#bbb; stroke-opacity: .6; }
     .legend { position: absolute; left: 10px; top: 10px; background: rgba(255,255,255,.9); border:1px solid #e5e5e5; padding:8px; border-radius:6px; font-size:12px;}
     .search-box { position: absolute; right: 360px; top: 10px; background: white; border: 1px solid #ccc; border-radius: 6px; padding: 4px;}
@@ -28,9 +25,9 @@
     <div id="content" class="ctx">—</div>
   </aside>
 
-  <!-- CAMBIO: leyenda con colores reales -->
+  <!-- CAMBIO: leyenda solo categorías -->
   <div class="legend">
-    <div><span style="display:inline-block;width:12px;height:12px;border-radius:50%;background:#1f77b4;margin-right:4px;"></span> Referencia</div>
+    <strong>Categorías</strong><br/>
     <div><span style="display:inline-block;width:12px;height:12px;border-radius:50%;background:red;margin-right:4px;"></span> Biográficas</div>
     <div><span style="display:inline-block;width:12px;height:12px;border-radius:50%;background:green;margin-right:4px;"></span> Producción literaria</div>
     <div><span style="display:inline-block;width:12px;height:12px;border-radius:50%;background:orange;margin-right:4px;"></span> Influencias y referencias culturales</div>
@@ -46,7 +43,7 @@
 <script>
   const width = window.innerWidth - 340, height = window.innerHeight;
 
-  // CAMBIO: color específico por categoría
+  // Colores específicos de categorías
   const categoryColors = {
     "Referencias biográficas": "red",
     "Producción literaria": "green",
@@ -55,7 +52,7 @@
   };
 
   function getColor(d) {
-    if (d.type === "reference") return "#1f77b4";
+    if (d.type === "reference") return "#1f77b4"; // azul
     if (d.type === "category") return categoryColors[d.label] || "#000";
     if (d.type === "author") return "#000"; // nodo central
     return "#999";
@@ -70,10 +67,6 @@
     const sep = (header.split(";").length > header.split(",").length) ? ";" : ",";
     const parse = d3.dsvFormat(sep).parse;
     return parse(txt);
-  }
-
-  function show(msg) {
-    document.getElementById("content").textContent = msg;
   }
 
   (async () => {
@@ -92,37 +85,11 @@
       });
 
       const svg = d3.select("#viz").append("svg")
-        .attr("width", width).attr("height", height)
-        .call(d3.zoom().on("zoom", (event) => { g.attr("transform", event.transform); })) // CAMBIO: zoom/pan
-        .append("g");
+        .attr("width", width).attr("height", height);
 
       const g = svg.append("g");
 
-      const link = g.append("g")
-        .attr("stroke", "#bbb").attr("stroke-opacity", 0.6)
-        .selectAll("line").data(links).join("line")
-        .attr("class", "link")
-        .attr("marker-end", "url(#arrow)");
-
-      const node = g.append("g")
-        .attr("stroke", "#fff").attr("stroke-width", 1.5)
-        .selectAll("circle").data(nodes).join("circle")
-        .attr("class", d => "node " + d.type)
-        .attr("r", d => d.type === "category" ? 18 : (d.type==="author" ? 24 : 8))
-        .attr("fill", d => getColor(d))
-        .call(d3.drag()
-          .on("start", (event,d) => { if (!event.active) simulation.alphaTarget(0.3).restart(); d.fx = d.x; d.fy = d.y; })
-          .on("drag",  (event,d) => { d.fx = event.x; d.fy = event.y; })
-          .on("end",   (event,d) => { if (!event.active) simulation.alphaTarget(0); d.fx = null; d.fy = null; })
-        )
-        .on("click", (event, d) => showPanel(d));
-
-      const label = g.append("g")
-        .attr("font-family", "sans-serif").attr("font-size", 11).attr("fill", "#333")
-        .selectAll("text").data(nodes).join("text")
-        .text(d => d.label).attr("dy", d => d.type==="category" ? -22 : -12).attr("text-anchor", "middle");
-
-      // CAMBIO: flechas en las conexiones
+      // Flechas en aristas
       svg.append("defs").selectAll("marker")
         .data(["arrow"]).join("marker")
         .attr("id", "arrow")
@@ -132,11 +99,39 @@
         .attr("orient", "auto")
         .append("path").attr("d", "M0,-5L10,0L0,5").attr("fill", "#bbb");
 
+      const link = g.append("g")
+        .selectAll("line").data(links).join("line")
+        .attr("class", "link")
+        .attr("stroke", "#bbb").attr("stroke-opacity", 0.6)
+        .attr("marker-end", "url(#arrow)");
+
+      const node = g.append("g")
+        .selectAll("circle").data(nodes).join("circle")
+        .attr("class", d => "node " + d.type)
+        .attr("r", d => d.type==="category" ? 20 : (d.type==="author" ? 30 : 8)) <!-- CAMBIO: tamaños -->
+        .attr("fill", d => getColor(d))
+        .call(d3.drag()
+          .on("start", (event,d) => { if (!event.active) simulation.alphaTarget(0.3).restart(); d.fx = d.x; d.fy = d.y; })
+          .on("drag",  (event,d) => { d.fx = event.x; d.fy = event.y; })
+          .on("end",   (event,d) => { if (!event.active) simulation.alphaTarget(0); d.fx = null; d.fy = null; })
+        )
+        .on("click", (event, d) => showPanel(d));
+
+      const label = g.append("g")
+        .selectAll("text").data(nodes).join("text")
+        .text(d => d.label)
+        .attr("dy", d => d.type==="category" ? -25 : (d.type==="author" ? -35 : -12))
+        .attr("font-size", d => d.type==="category" ? 14 : (d.type==="author" ? 18 : 11)) <!-- CAMBIO: textos -->
+        .attr("text-anchor", "middle")
+        .attr("fill", "#333");
+
       const simulation = d3.forceSimulation(nodes)
-        .force("link", d3.forceLink(links).id(d => d.id).distance(80).strength(0.3))
+        .force("link", d3.forceLink(links).id(d => d.id).distance(l => {
+          return (l.source.type === "category") ? 120 : 80; // CAMBIO: mayor espaciado
+        }).strength(0.3))
         .force("charge", d3.forceManyBody().strength(-250))
         .force("center", d3.forceCenter(width / 2, height / 2))
-        .force("collision", d3.forceCollide().radius(d => d.type==="category" ? 34 : (d.type==="author" ? 40 : 16)));
+        .force("collision", d3.forceCollide().radius(d => d.type==="category" ? 40 : (d.type==="author" ? 50 : 18)));
 
       simulation.on("tick", () => {
         link
@@ -147,6 +142,17 @@
 
         node.attr("cx", d => d.x).attr("cy", d => d.y);
         label.attr("x", d => d.x).attr("y", d => d.y);
+      });
+
+      // CAMBIO: zoom/pan + ajuste inicial
+      const zoom = d3.zoom().on("zoom", (event) => g.attr("transform", event.transform));
+      svg.call(zoom);
+      simulation.on("end", () => {
+        const box = g.node().getBBox();
+        const scale = Math.min(width / box.width, height / box.height) * 0.9;
+        const tx = (width - scale * (box.x + box.width/2));
+        const ty = (height - scale * (box.y + box.height/2));
+        svg.transition().duration(500).call(zoom.transform, d3.zoomIdentity.translate(tx, ty).scale(scale));
       });
 
       function showPanel(d) {
@@ -160,13 +166,10 @@
       }
       function escapeHtml(s) { return (s || "").replaceAll("&","&amp;").replaceAll("<","&lt;").replaceAll(">","&gt;"); }
 
-      // CAMBIO: quitamos el mensaje de “datos cargados”
-      document.getElementById("content").textContent = "—";
-
-      // CAMBIO: buscador
+      // CAMBIO: buscador funcional
       document.getElementById("search").addEventListener("input", e => {
         const term = e.target.value.toLowerCase();
-        node.attr("stroke", d => (d.type==="reference" && d.label.toLowerCase().includes(term)) ? "yellow" : "#fff")
+        node.attr("stroke", d => (d.type==="reference" && d.label.toLowerCase().includes(term)) ? "yellow" : null)
             .attr("stroke-width", d => (d.type==="reference" && d.label.toLowerCase().includes(term)) ? 3 : 1.5);
       });
 
